2005-12-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-6-0

	* feature: pid file is now optional

2005-12-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: allow gadmins to change to homedir for their users

2005-12-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: crash when invalid arguments are given to site group

2005-12-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: merge initial zeroconf support

2005-12-10  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: reply wrong address on PASV
	* bugfix: SFV module not working

2005-12-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: support for multiple addresses/ports binds. This also
	allows to have both IPv4 and IPv6 sockets on *BSD (Closes: #0035)

2005-12-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: avoid segfault when login fails for inexistant user
	* bugfix: close SSL data connection when connection fails
	* bugfix: mkdir not working with absolute paths
	* bugfix: reply correct code (50x) on unknown commands

2005-11-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: avoid segfault when exiting if no backend
	* bugfix: wrong address for client with ipv6

2005-11-25  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: unable to upload files

2005-11-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: add option to disable ident lookups

2005-11-19  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new event handler

2005-11-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: error while re-generating GnuTLS parameters after one day
	* feature: reduced memory usage

2005-11-10  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: unable to list directory in firefox

2005-11-01  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added support for crontab in new config format
	* feature: added option to disable TLS (even if compiled)

2005-10-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: cookie %spacefree not always working