@@ -1,3 +1,7 @@
+2005-12-30  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* bugfix: sfv module not using event POSTUPLOAD
+
 2005-12-27  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* --- svn commit TAG: rel-0-6-0
